Use Java 17 features and cleanup